Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10733

Opening pro files takes too long

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.5.0-rc1
    • Qt Creator 2.8.1, Qt Creator 3.0.0-rc1, Qt Creator 3.3.0-beta1
    • Windows 7 64 bit
      Creator 2.8.32 from qt-windows-opensource-5.2.0-beta1-android-x86-win32-offline_2013-11-08_21-35-44-141.exe
      Intel Core i7-3770 CPU
      16 GB RAM

      1. Remove Creator's settings from %APPDATA%.
      2. Start Creator.
      3. Make sure that Creator automatically detected a Qt 5 kit. If not, add one in "Tools" -> "Options...".
      4. Have a clean checkout of Qt 4.8.5's sources.
      5. Open projects.pro from this repository.
        It will take nearly three minutes until Creator switches to Projects mode and shows the "Configure Project" screen. Most of the time Creator's memory consumption does not rise and the CPU is idle.

      This is the case with Creator from a downloaded binary package as well as with the Creator I built on Qt 5 stable.

      When I build Creator from the same revision but on top of Qt 4.8.5 instead of Qt 5, it needs about 30 seconds for the same procedure. This still is a long time but it's much more reasonable than three minutes.

        For Gerrit Dashboard: QTCREATORBUG-10733
        # Subject Branch Project Status CR V

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: